objects/Organisation__c.object
<CustomObject>
    <fields>
        <fullName>Beta_Program_Authorised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beta Program Authorised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Legal Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Organisation</label>
    <nameField>
        <label>Organisation Trading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>